# CSC2012_Project

./: .gitignore  Book1.xlsx  README.md  docker-compose.yaml  environment-silicon-mac.yml  environment.yaml  environment.yml  file copy.csv  file.csv  hand_gesture_model.h5  hand_gesture_model_LSTM.h5  hand_gesture_model_SIMPLERNN.h5  pyproject.toml  requirements.txt  training.ipynb  training.py
api/modelretrieval/: Dockerfile  main.py
api/numpysaver/: Dockerfile  main.py
api/training/: Dockerfile  main.py
app/: Dockerfile  app-bak.py  app.ini  app.py  app2.py  environment.yml  requirements.txt
app/templates/: index.html  predict.html
data/I love you/: ap_1678778758.npy  ap_1678778798.npy  ap_1678778807.npy  ap_1678778816.npy  ap_1678778876.npy  ap_1678778885.npy  ap_1678778920.npy  ap_1678778925.npy  ap_1678778930.npy  ap_1678778934.npy  ap_1678778938.npy  ap_1678778949.npy  ap_1678778952.npy  jf_1678777736.npy  jf_1678777746.npy  jf_1678777750.npy  jf_1678777756.npy  jf_1678777765.npy  jf_1678777769.npy  jf_1678777789.npy  jf_1678777789_label.npy  jf_1678777800_label.npy  jf_1678777808_label.npy  jf_1678777824.npy  jf_1678777824_label.npy  jf_1678777827.npy  jf_1678777830.npy  jf_1678777830_label.npy  jf_1678777835.npy  jf_1678777839.npy  jf_1678777845.npy  jf_1678777845_label.npy  jf_1678777852.npy  jf_1678777866.npy  jf_1678777869.npy  jf_1678777874.npy  jf_1678777874_label.npy  jf_1678777881.npy  jf_1678777884.npy  jf_1678777887.npy  (+114 more)
data/a/: jf_1678778296.npy  jf_1678778298.npy  jf_1678778306.npy  jf_1678778309.npy  jf_1678778314.npy  jf_1678778322.npy  jf_1678778325.npy  jf_1678778338.npy  jf_1678778345.npy  jf_1678778351.npy  jf_1678778351_label.npy  jf_1678778359.npy  jf_1678778393.npy  (+101 more)
gateway/: nginx.conf
image_collector/: collect_image.py
initial-tryout/: savedata.py  test.py  testsave.ipynb  training.py
models/: hand_gesture_model_CNN.h5
(+1672 files in other folders)
